public class Figure {
    private String name;

    public Figure(String name) {
        this.name = name;
    }
}
