@startuml

title __INHERITANCE's Class Diagram__\n

  package  {
    class Circle {
    }
  }
  

  package  {
    class Figure {
    }
  }
  

  package  {
    class Program {
    }
  }
  

  package  {
    class Rectangle {
    }
  }
  

  package  {
    class Square {
    }
  }
  

  package  {
    class Triangle {
    }
  }
  

  Circle -up-|> Figure
  Rectangle -up-|> Figure
  Square -up-|> Figure
  Triangle -up-|> Figure


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
